# shroom95-decomp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  copy_client_files.py  issues.txt  regex.txt
src/: ClientConfig.hpp  main.cpp
src/ext/: CMakeLists.txt  additional.cpp  additional.hpp  ext_field.cpp  ext_field.h  geometry.cpp  geometry.hpp  opcodes.h
src/game/: CMakeLists.txt
src/game/ADBalloon/: ADBalloon.cpp  ADBalloon.hpp  ADBalloon.ipp  ADBalloon_regen.ipp
src/game/AESCipher/: AESCipher.cpp  AESCipher.hpp  AESCipher.ipp  AESCipher_regen.ipp  aes.hpp
src/game/ActionFrame/: ActionFrame.cpp  ActionFrame.hpp  ActionFrame.ipp  ActionFrame_regen.ipp  regen.hpp
src/game/ActionMan/: ActionMan.cpp  ActionMan.hpp  ActionMan.ipp  ActionMan_regen.ipp  regen.hpp
src/game/AdminShopDlg/: AdminShopDlg.cpp  AdminShopDlg.hpp  AdminShopDlg.ipp  AdminShopDlg_regen.ipp  regen.hpp
src/game/AffectedAreaPool/: AffectedAreaPool.cpp  AffectedAreaPool.hpp  AffectedAreaPool.ipp  AffectedAreaPool_regen.ipp
src/game/AnimationDisplayer/: AnimationDisplayer.cpp  AnimationDisplayer.hpp  AnimationDisplayer.ipp  AnimationDisplayer_regen.ipp  regen.hpp
src/game/AntiPrivateServer/: AntiPrivateServer.cpp  AntiPrivateServer.hpp  AntiPrivateServer.ipp  AntiPrivateServer_regen.ipp
src/game/Avatar/: Avatar.cpp  Avatar.hpp  Avatar.ipp  Avatar_regen.ipp  regen.hpp
src/game/AvatarMegaphone/: AvatarMegaphone.cpp  AvatarMegaphone.hpp  AvatarMegaphone.ipp  AvatarMegaphone_regen.ipp  regen.hpp
src/game/BasicSystem/: BasicSystem.cpp  BasicSystem.hpp  BasicSystem.ipp  BasicSystem_regen.ipp
src/game/BattleRecordMan/: BattleRecordMan.cpp  BattleRecordMan.hpp  BattleRecordMan.ipp  BattleRecordMan_regen.ipp
src/game/BookDlg/: BookDlg.cpp  BookDlg.hpp  BookDlg.ipp  BookDlg_regen.ipp  regen.hpp
src/game/Bullet/: Bullet.cpp  Bullet.hpp  (+2 more)
src/global/: RegenBase.hpp  WvsExtra.h  WvsStatics.h  WvsStrings.h
src/pcom/: CMakeLists.txt  PCom.cpp  PCom.h  main.cpp  wz.h  xcom_ptr.h
src/util/: additional.h  asm_helper.h  base.h  crtti.h  extra.h  geometry.h  helper.cpp  helper.h  imports.cpp  imports.h  macros.h  tsingleton.h  types.h
src/ztl/: CMakeLists.txt  CRand32.cpp  CRand32.h  ZFileStream.cpp  ZFileStream.h  ZSocketBase.cpp  ZSocketBase.h  ZTimeUtil.cpp  ZTimeUtil.h  helper.h  sectype.cpp  sectype.h  secure.h  trs_tree.cpp  trs_tree.h  uint128.h  util.h  xcomutil.h  zalloc.cpp  zalloc.h  zallocex.cpp  zallocex.h  zarray.h  zcom.cpp  zcom.h  zcomapi.cpp  zcomapi.h  zexception.cpp  zexception.h  zfixedarray.h  zhash.h  zheap.h  zlist.h  zlock.cpp  zlock.h  zmap.h  zrecyclable.cpp  zrecyclable.h  zref.cpp  zref.h  (+5 more)
tests/: CMakeLists.txt  test.cpp
tmp/: gen_guid.py  guids.txt  guids_out.txt  regex.txt  replace_zsec.py  sec_inp.txt  sec_out.txt
(+1308 files in other folders)
